styles/components/createMuralModal.scss
.create-mural-modal {
    .modal-overlay {
        position: fixed;
        top: 0;
        left: 0;
        z-index: 1040;
        width: 100vw;
        height: 100vh;
        background-color: #000;
        opacity: 0.5;
    }

    .modal-wrapper {
        display: flex;
        justify-content: center;
        align-items: center;
        position: fixed;
        top: 0;
        left: 0;
        z-index: 1050;
        width: 100%;
        height: 100%;
        overflow-x: hidden;
        overflow-y: auto;
        outline: 0;
    }

    .modal {
        z-index: 100;
        background: #333;
        color: white;
        position: relative;
        margin: 1.75rem auto;
        border-radius: 3px;
        max-width: 500px;
        padding: 1em;
    }

    .modal-header {
        display: flex;
        justify-content: space-between;
        align-items: flex-start;
        height: fit-content;

        h2 {
            color: yellow;
        }
    }

    .modal-close-button {
        background-color: #333;
        font-size: 1.4rem;
        font-weight: 700;
        line-height: 1;
        color: white;
        cursor: pointer;
        border: none;
        padding: 0;
        margin: 0;
    }

    .group {
        display: flex;
        flex-direction: column;
        margin-bottom: 1em;
    }

    input {
        padding: 0.3rem;
        font-size: 1.3rem;
        margin-top: 0.5rem;
    }

    .submit {
        padding: 0.5rem 1rem;
        background-color: yellow;
        color: black;
        border: none;
        font-weight: bold;
        border: black solid 2px;
        font-size: 1rem;
        margin-top: 1em;
    }
}

